--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,20 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+
+
+@book{Artificial-Intelligence:-A-Modern-Approach,
+  author={Stuart Russell and Peter Norvig},
+  title={Artificial-Intelligence},
+  note={his book is widely used in undergraduate and graduate AI courses and covers a broad range of topics in AI, including traditional AI techniques and some foundational aspects of machine learning. However, it may not cover the most recent developments in deep learning and neural networks.},
+  preview = {aii.gif},
+}
+
+
+@book{Understanding-Deep-Learning,
+  author={Simon Prince},
+  title={Understanding Deep Learning},
+  note={This book is relatively new and focuses on deep learning, providing a detailed introduction to neural networks and their applications. It includes many diagrams and Jupyter notebooks to aid in learning.},
+  preview= {zizo.gif},
+  }
